[Add] 스터디룸 상세 조회, 검색 API
StudyRoomDetailResponse DTO와 엔드포인트 생성해 ID별 스터디룸 세부 정보 조회. 제목별 스터디룸 검색 API를 추가.